# tabela

./: .gitignore  CONTRIB.md  Cargo.toml  LICENSE  README.md  build.sh  check.sh  com.mastropaolo.tabela.json  meson.build  release.sh  tool.sh
.github/workflows/: ci.yml
build-aux/: com.mastropaolo.tabela.Devel.json  com.mastropaolo.tabela.json  com.mastropaolo.tabela.www.Devel.json  com.mastropaolo.tabela.www.json  com.mastropaolo.www.tabela.Devel.json  com.mastropaolo.www.tabela.json.in  dist-vendor.sh
data/: com.mastropaolo.tabela.desktop.in  com.mastropaolo.tabela.gschema.xml  com.mastropaolo.tabela.metainfo.xml.in  com.mastropaolo.tabela.service.in  com.mastropaolo.www.tabela.desktop.in  com.mastropaolo.www.tabela.gschema.xml  com.mastropaolo.www.tabela.metainfo.xml.in  com.mastropaolo.www.tabela.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  it.po  meson.build  nl.po  tabela.pot
src/: apperror.rs  application.rs  config.rs  formatter.rs  main.rs  meson.build  tabela.gresource.xml  table.rs  window.rs  window.ui
src/formatting/: html_formatter.rs  markdown_formatter.rs  mod.rs  split_line.rs  table.rs
